# TinyEmbedKit

./: CMakeLists.txt  README.md
adt/: tek_array.c  tek_array.h  tek_fifo.c  tek_fifo.h  tek_stack.c  tek_stack.h
communication/: protocol.c  protocol.h
controller/: tek_controller.hpp  tek_ctrl.h  tek_mpc.c  tek_pid.c  tek_pid.cpp  tek_slidingMode.c
filter/: tek_comparator.c  tek_comparator.cpp  tek_filter.c  tek_filter.cpp  tek_filter.h  tek_filter.hpp
